Fix height overflow error and manage modal state

--- a/src/features/users/Layout.less
+++ b/src/features/users/Layout.less
@@ -5,4 +5,7 @@
     // background-color: rgb(204, 204, 204);
     flex-grow: 1;
     height: inherit;
+    background-image: url('../../images/african-wallpaper');
+    // height: 100%;
+    // background-repeat: repeat-y;
 }
