--- a/src/features/users/UsersContainer.less
+++ b/src/features/users/UsersContainer.less
@@ -28,7 +28,7 @@
     // justify-content: flex-start;
     align-items: center;    
     // padding: 5px;
-    height: 90%;
+    height: 93%;
     flex-direction: column;
 }
 .user-detail {
